Update project with entities and repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=mega_task
+
+
+spring.datasource.url=jdbc:h2:mem:mega
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=Urfake
+spring.datasource.password=Urfake
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
